Removed jacoco as it always fails in azure pipeline